Changed the css files to sass files.

--- a/src/components/landingPage.scss
+++ b/src/components/landingPage.scss
@@ -3,10 +3,10 @@
   width: 50%;
   width: 600px;
   text-align: center;
-}
 
-.landing .registration {
-  margin: 10px;
-  width: 80px;
-  height: 25px;
+  .registration {
+    margin: 10px;
+    width: 80px;
+    height: 25px;
+  }
 }
