--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -2,12 +2,42 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: #fffafa;
   margin: auto;
   padding: 25px;
-  width: 500px;
   text-align: center;
   box-shadow: 3px 3px 3px 3px #e0e0e0;
+
+  .registration-content {
+    .registration-signup {
+      display: flex;
+      height: 500px;
+      flex-direction: column;
+
+      .registration-signup-content {
+        display: flex;
+        height: 350px;
+        flex-direction: column;
+        justify-content: space-between;
+
+        .registration-signup-content-field {
+          display: flex;
+          width: 375px;
+          flex-direction: row;
+          justify-content: space-between;
+
+          span {
+            margin-top: 7px;
+          }
+        }
+      }
+
+      .registration-signup-footer {
+        margin-top: 30px;
+      }
+    }
+  }
 
   .registration-error {
     margin: auto;
@@ -18,18 +48,26 @@
       color: red;
     }
   }
-}
 
-input[type="text"] {
-  width: 250px;
-  height: 25px;
-  border-color: #bdbdbd;
-  border-radius: 3px;
-}
+  input[type="text"] {
+    text-indent: 5px;
+    width: 250px;
+    height: 25px;
+    border-style: solid;
+    border-color: #616161;
+    border-radius: 6px;
+  }
 
-input[type="password"] {
-  width: 250px;
-  height: 25px;
-  border-color: #bdbdbd;
-  border-radius: 3px;
+  input[type="password"] {
+    text-indent: 5px;
+    width: 250px;
+    height: 25px;
+    border-style: solid;
+    border-color: #616161;
+    border-radius: 6px;
+  }
+
+  ::-webkit-input-placeholder {
+    font-size: 12px;
+  }
 }
