--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -3,10 +3,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #fffafa;
-  margin: auto;
+  width: 800px;
+  margin: 50px auto;
   padding: 25px;
   text-align: center;
+  background-color: #fffafa;
   box-shadow: 3px 3px 3px 3px #e0e0e0;
 
   .registration-content {
