Added the functionality to edit a note.

--- a/src/components/home/homePage.scss
+++ b/src/components/home/homePage.scss
@@ -8,7 +8,7 @@
     margin-bottom: 2.5px;
     padding: 0px 10px;
     justify-content: space-between;
-    background-color: #fafad2;
+    background-color: #fffaf0;
     border: 1px solid #fafad2;
     border-radius: 15px;
 
