--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -54,8 +54,7 @@
     text-indent: 5px;
     width: 250px;
     height: 25px;
-    border-style: solid;
-    border-color: #616161;
+    border: 1px solid #616161;
     border-radius: 6px;
   }
 
@@ -63,8 +62,7 @@
     text-indent: 5px;
     width: 250px;
     height: 25px;
-    border-style: solid;
-    border-color: #616161;
+    border: 1px solid #616161;
     border-radius: 6px;
   }
 
