--- a/src/components/modal/modals/editNote/editNote.scss
+++ b/src/components/modal/modals/editNote/editNote.scss
@@ -61,6 +61,6 @@
   .newNote-footer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
   }
 }
