--- a/src/components/modal/modals/editNote/editNote.scss
+++ b/src/components/modal/modals/editNote/editNote.scss
@@ -1,14 +1,15 @@
-.newNote-body {
+.editNote-body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 
-  .newNote-content {
+  .editNote-content {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    height: 480px;
 
-    .newNote-content-title {
+    .editNote-content-title {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
@@ -33,20 +34,22 @@
       }
     }
 
-    .newNote-content-body {
+    .editNote-content-body {
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
       margin: 10px;
 
-      p {
-        margin: 10px;
+      span {
+        margin: 10px 10px 10px 13px;
+        text-align: justify;
       }
 
-      .newNote-content-body-editable {
-        min-height: 400px;
+      .editNote-content-body-editable {
+        min-height: 320px;
         height: auto;
         border: 1px solid lightgrey;
+        text-align: justify;
         text-indent: 5px;
         padding: 5px;
 
@@ -58,9 +61,12 @@
     }
   }
 
-  .newNote-footer {
+  .editNote-footer {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
+    height: 50px;
+    border-top: 1px solid lightgrey;
   }
 }
