--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-family: "Avenir LT", Verdana, Arial, sans-serif;
   margin: 0;
 }
 
