--- a/src/components/home/notes.scss
+++ b/src/components/home/notes.scss
@@ -5,8 +5,9 @@
   align-items: center;
   height: 40px;
   padding: 5px 10px;
-  background-color: #4682b4;
-  color: white;
+  background-color: #d7edf7;
+  color: #424242;
+  font-size: 25px;
 }
 
 .notes-owner {
