--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,31 +1,65 @@
-.notes-modal {
-  & * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    user-select: none;
+// .inhouse-modal {
+//   position: fixed;
+//   top: 50%;
+//   left: 50%;
+//   width: 700px;
+//   max-width: 100%;
+//   height: 500px;
+//   max-height: 100%;
+//   transform: translate(-50%, -50%);
+//   border: 1px solid grey;
+//   background-color: #fffde7;
+// }
+
+/* The Modal (background) */
+.inhouse-modal {
+  //display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.inhouse-modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+
+  &.modalsize-small {
+    width: 550px;
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
+    margin-top: 160px;
   }
 
-  display: block;
-  width: 100%;
-  height: 100%;
-  margin: -20px;
-  position: absolute;
-  z-index: 3;
+  &.modalsize-big {
+    width: 900px;
+    max-width: 100%;
+    height: 600px;
+    max-height: 100%;
+  }
 
-  .notes-modal-content {
+  .notes-modal-header {
     display: flex;
-    flex-direction: column;
-    padding: 20px;
-
-    .notes-modal-header {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: space-between;
-      padding: 15px;
-      margin: 5px;
-      border-bottom: 1px solid lightgrey;
-    }
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 65px;
+    padding: 0 15px;
+    border-bottom: 1px solid lightgrey;
   }
 }
