--- a/src/components/modal/modals/newNote/newNote.scss
+++ b/src/components/modal/modals/newNote/newNote.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    height: 480px;
 
     .newNote-content-title {
       display: flex;
@@ -39,14 +40,16 @@
       justify-content: space-evenly;
       margin: 10px;
 
-      p {
-        margin: 10px;
+      span {
+        margin: 10px 10px 10px 13px;
+        text-align: justify;
       }
 
       .newNote-content-body-editable {
-        min-height: 400px;
+        min-height: 320px;
         height: auto;
         border: 1px solid lightgrey;
+        text-align: justify;
         text-indent: 5px;
         padding: 5px;
 
@@ -62,5 +65,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    height: 50px;
+    border-top: 1px solid lightgrey;
   }
 }
