--- a/src/components/notes/TopBar.scss
+++ b/src/components/notes/TopBar.scss
@@ -11,25 +11,31 @@
   background-color: bisque;
 
   .top-bar-button {
-    width: 55px;
+    width: 70px;
     height: 25px;
     margin: 0px 3px;
-    border-radius: 4px;
+    border-radius: 12px;
     font-size: 12px;
+    background-color: #29b6f6;
 
     &.button-edit {
-      background-color: blue;
       color: white;
     }
 
     &.button-share {
-      background-color: #ff6347;
       color: white;
     }
 
     &.button-delete {
-      background-color: red;
       color: white;
     }
+
+    &.button-unshare {
+      color: white;
+    }
+  }
+
+  button:focus {
+    outline: none;
   }
 }
