--- a/src/components/notes/notes.scss
+++ b/src/components/notes/notes.scss
@@ -9,15 +9,39 @@
 }
 
 .note-title {
-  border-bottom: 0.5px solid lightgray;
-  height: auto;
-  max-height: 75px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-  p {
-    font-weight: bold;
-    font-size: 18px;
-    margin: 0;
+  .note-title-owner-name {
+    display: inline-flex;
+    background-color: #fdf4e5;
+    color: #9e9e9e;
+    margin: auto;
+    border: 1px solid #fff9c4;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+
+    span {
+      color: #616161;
+      margin: 3px 15px;
+    }
+  }
+
+  .note-title-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 0.5px solid lightgray;
+    height: auto;
+    max-height: 75px;
     padding: 15px;
+
+    span {
+      font-weight: bold;
+      font-size: 18px;
+    }
   }
 }
 
