--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -23,6 +23,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   animation-name: animatetop;
   animation-duration: 0.4s;
+  border-radius: 5px;
 
   &.modalsize-small {
     width: 550px;
@@ -48,5 +49,6 @@
     height: 65px;
     padding: 0 15px;
     border-bottom: 1px solid lightgrey;
+    color: #616161;
   }
 }
