--- a/src/components/home/notes.scss
+++ b/src/components/home/notes.scss
@@ -7,7 +7,10 @@
   padding: 5px 10px;
   background-color: #d7edf7;
   color: #424242;
-  font-size: 25px;
+
+  p {
+    font-size: 25px;
+  }
 }
 
 .notes-owner {
