--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -11,22 +11,28 @@
   box-shadow: 3px 3px 3px 3px #e0e0e0;
 
   .registration-content {
+    .registration-signin {
+      margin-bottom: 15px;
+    }
+
     .registration-signup {
       display: flex;
-      height: 500px;
       flex-direction: column;
+      justify-content: space-between;
+      height: 475px;
+      margin-bottom: 15px;
 
       .registration-signup-content {
         display: flex;
-        height: 350px;
         flex-direction: column;
         justify-content: space-between;
+        height: 350px;
 
         .registration-signup-content-field {
           display: flex;
-          width: 375px;
           flex-direction: row;
           justify-content: space-between;
+          width: 375px;
 
           span {
             margin-top: 7px;
@@ -53,17 +59,13 @@
   input[type="text"] {
     text-indent: 5px;
     width: 250px;
-    height: 25px;
-    border: 1px solid #616161;
-    border-radius: 6px;
+    height: 30px;
   }
 
   input[type="password"] {
     text-indent: 5px;
     width: 250px;
-    height: 25px;
-    border: 1px solid #616161;
-    border-radius: 6px;
+    height: 30px;
   }
 
   ::-webkit-input-placeholder {
