Updating styles for the header.

--- a/src/components/home/notes.scss
+++ b/src/components/home/notes.scss
@@ -4,12 +4,12 @@
   justify-content: space-between;
   align-items: center;
   height: 40px;
-  padding: 5px 10px;
-  background-color: #d7edf7;
+  padding: 3px 10px;
+  background-color: #e8eaf6;
   color: #424242;
 
   p {
-    font-size: 25px;
+    font-size: 20px;
   }
 }
 
