--- a/src/components/notes/notes.scss
+++ b/src/components/notes/notes.scss
@@ -1,58 +1,61 @@
 .note {
   display: inline-block;
-  margin: 5px;
-  border: 2px solid #d7edf7;
+  margin: 5px 10px;
   border-radius: 5px;
   width: 320px;
   height: auto;
   max-height: 400px;
-}
+  box-shadow: 1px 1px 3px 3px #bdbdbd;
 
-.note-title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  .note-title-owner-name {
-    display: inline-flex;
-    background-color: #fdf4e5;
-    color: #9e9e9e;
-    margin: auto;
-    border: 1px solid #fff9c4;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-
-    span {
-      color: #616161;
-      margin: 3px 15px;
-    }
-  }
-
-  .note-title-info {
+  .note-title-bar-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    border-bottom: 0.5px solid lightgray;
-    height: auto;
-    max-height: 75px;
-    padding: 15px;
+    flex-direction: column;
+    justify-content: center;
 
-    span {
-      font-weight: bold;
-      font-size: 18px;
+    .note-title-owner-name {
+      display: inline-flex;
+      background-color: #fdf4e5;
+      color: #9e9e9e;
+      margin: auto;
+      border: 1px solid #fff9c4;
+      border-bottom-left-radius: 25px;
+      border-bottom-right-radius: 25px;
+
+      span {
+        color: #616161;
+        margin: 3px 15px;
+      }
+    }
+
+    .note-title {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      border-bottom: 0.5px solid lightgray;
+      height: auto;
+      max-height: 75px;
+      padding: 10px;
+
+      span {
+        font-weight: bold;
+        font-size: 18px;
+        color: #424242;
+        margin: 5px;
+      }
     }
   }
-}
 
-.note-data {
-  text-align: justify;
-  overflow: scroll;
-  height: auto;
-  max-height: 285px;
-  white-space: pre-wrap;
+  .note-data {
+    text-align: justify;
+    overflow: scroll;
+    height: auto;
+    max-height: 285px;
+    white-space: pre-wrap;
 
-  p {
-    padding: 10px;
+    p {
+      padding: 10px;
+      color: #424242;
+    }
   }
 }
