--- a/src/components/utility/utilities/notes/notesPopover.scss
+++ b/src/components/utility/utilities/notes/notesPopover.scss
@@ -6,13 +6,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 30px;
-    background-color: #eeeeee;
+    width: auto;
+    height: auto;
+    padding: 3px 6px;
     border-radius: 8px;
 
     &.popover-icons-open {
-      background-color: #616161;
+      background-color: #9e9e9e;
     }
 
     .popover-icon {
